<resources>
    <string name="app_name">DicodingEventApp</string>
    <string name="title_home">Home</string>
    <string name="title_upcoming">Upcoming</string>
    <string name="title_finished">Finished</string>
    <string name="searchbar_hint">Ketikan Sesuatu</string>
    <string name="author">Oleh: %s</string>
    <string name="location">Lokasi: %s</string>
    <string name="begin_time">Dimulai: %s</string>
    <string name="quota">Kuota: %d</string>
    <string name="quota_remainder">Sisa Kuota: %d</string>
    <string name="register_btn">Daftar Sekarang</string>
    <string name="dicoding_event">Dicoding Event</string>
    <string name="header_heading">Kembangkan Jaringan dan Belajar dari Developer Terbaik</string>
    <string name="header_paragraph">Tingkatkan kemampuan teknis sekaligus membuka jaringan dengan developer terbaik melalui seminar atau workshop yang diselenggarakan oleh partner Dicoding.</string>
    <string name="upcoming_title">Upcoming Event</string>
    <string name="finished_title">Successful Event</string>
    <string name="favorite_title">Favorite Event</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="title_settings">Settings</string>
    <string name="title_favorite">Favorite</string>

</resources>