<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nudriin.dicodingeventapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.nudriin.dicodingeventapp.ui.upcoming.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming" >
        <action
            android:id="@+id/action_navigation_upcoming_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.nudriin.dicodingeventapp.ui.finished.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished" >
        <action
            android:id="@+id/action_navigation_finished_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.nudriin.dicodingeventapp.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="eventId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.nudriin.dicodingeventapp.ui.settings.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.nudriin.dicodingeventapp.ui.favorite.FavoriteFragment"
        android:label="fragment_favorite"
        tools:layout="@layout/fragment_favorite" >
        <action
            android:id="@+id/action_navigation_favorite_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>


</navigation>