<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="16dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/headerCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="?attr/actionBarSize"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="16dp"
            android:background="?attr/colorPrimary"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/dicodingImg"
                android:layout_width="60dp"
                android:layout_height="60dp"
                tools:src="@tools:sample/avatars"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/dicodingEventTxt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/dicoding_event"
                android:textColor="@color/dark"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/dicodingImg"
                app:layout_constraintStart_toEndOf="@id/dicodingImg"
                app:layout_constraintTop_toTopOf="@id/dicodingImg" />

            <TextView
                android:id="@+id/headerHeadingTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                style="@style/Text.Title"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/dicodingImg"
                android:text="@string/header_heading"
                android:textColor="@color/dark"
                />

            <TextView
                android:id="@+id/headerParagraphTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:textSize="12sp"
                app:layout_constraintTop_toBottomOf="@id/headerHeadingTxt"
                android:text="@string/header_paragraph"
                android:textColor="@color/dark"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/upcomingTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerCard"
        android:textSize="16sp"
        android:text="@string/upcoming_title"
        style="@style/Text.Title"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUpcoming"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upcomingTitle"
        />

    <TextView
        android:id="@+id/finishedTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvUpcoming"
        android:textSize="16sp"
        android:text="@string/finished_title"
        style="@style/Text.Title"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFinished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/finishedTitle"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>